package SmartHome.domain;

public interface Actuator {

    /**
     * Getter for the actuator type.
     *
     * @return the actuator type.
     */
    ActuatorType getActuatorType();

}
